# python-workbook

./: .gitignore  CLAUDE.md  README.md  conftest.py  lefthook.yml  pyproject.toml  ruff.toml  table_of_contents.md  todo.md
.zed/: settings.json  tasks.json
000/: first_project.md  math_functions.md  string_formatting.md
000_base/: base.md  vars_and_types.md
000_intro/: conftest.py
001_hello_world/: hello_world.md
002_hello_name/: hello_name.md
002_mailing_address/: mailing_address.md
003_basic_calculator/: basic_calculator.md
003_hello_name/: hello_name.md
003_name_age/: name_age.md
004_advanced_calculator/: advanced_calculator.md
004_name_age/: name_age.md
004_two_numbers/: two_numbers.md
005_name_age/: name_age.md
006_age_calculator/: age_calculator.md
006_basic_calculator/: basic_calculator.md
007_advanced_calculator/: advanced_calculator.md
007_birth_year/: birth_year.md
008_square_area/: square_area.md
008_two_numbers/: two_numbers.md
009_square/: square.md
009_square_area/: square_area.md
009_three_numbers/: three_numbers.md
010_age_calculator/: age_calculator.md
010_square/: square.md
010_square_area/: square_area.md
010_three_numbers/: three_numbers.md
010_triangle_area/: triangle_area.md
011_birth_year/: birth_year.md
011_rectangle_area/: rectangle_area.md
011_sum_digits/: sum_digits.md
011_triangle_area/: triangle_area.md
012_birth_year/: birth_year.md
012_rectangle_perimeter/: rectangle_perimeter.md
013_circle_area/: circle_area.md
013_power_calculator/: power_calculator.md
QDUOJ/: CLAUDE.md
(+1238 files in other folders)
