[project]
name = "python-workbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = "--tb=no --continue-on-collection-errors"
